css/index.css
/* @import './fonts.css'; */
::-webkit-scrollbar {
  width: 5px;
  height: 5px;
  background-color: #282828;
}
::-webkit-scrollbar-thumb {
  background-color: #8D57D8;
}
.row {
  margin-left: 0px;
  margin-right: 0px;
}
.bodyclass {
  margin: 0px;
  width: 100vw;
  height: 100vh;
  background-color: #171717;
  font-family: 'Comfortaa';
  color: #f6f1ed;
  overflow: hidden;
}
.containermain {
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: column;
  overflow: scroll;
}
#contentHome,
#contentEvents,
#contentCultural,
#contentAbout,
#contentSponsor,
#contentContactUs {
  width: 100%;
  height: calc(100% - 64px);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
#contentHome {
  z-index: 1;
}
#contentEvents,
#contentAbout,
#contentCultural,
#contentSponsor,
#contentContactUs {
  justify-content: flex-start;
  opacity: 0;
  display: none;
  z-index: 1;
}
#eventDescription {
  display: none;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  opacity: 0;
}
#logoContainer {
  opacity: 0;
  width: 450px;
  height: 350px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
#topMenu {
  height: 64px;
  font-size: 12px;
  font-family: 'Lato';
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  z-index: 9;
}
#divCountdown {
  display: flex;
  opacity: 0;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
}
#divCountdown * {
  padding: 4px;
}
#countdown {
  font-family: 'Lato';
  font-weight: bold;
}
.heading {
  font-size: 48px;
  padding: 32px;
}
#tagCombo {
  height: 40px;
}
#searchTagButton:hover {
  cursor: pointer;
}
.block {
  display: block;
}
.fade-in {
  opacity: 1;
}
.fade-out {
  opacity: 0;
}
.none {
  display: none !important;
}
.event_card {
  transition: opacity 1s ease-in-out;
}
.tag {
  padding: 4px;
  border: 1px solid white;
}
.cards {
  margin: 16px;
  display: flex;
  flex-direction: row;
  justify-content: center;
  flex-wrap: wrap;
  overflow-y: auto;
  box-shadow: 0px 0px 4px 2px #e3e0cf;
}
.card {
  max-width: 200px;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  margin: 16px;
  box-shadow: 0px 0px 4px 2px #00000077;
  animation: scaleCardsDown 300ms ease-out forwards;
}
.card:hover {
  cursor: pointer;
  animation: scaleCardsUp 300ms ease-out forwards;
}
.card .card-head {
  display: flex;
  height: 155px;
    width: 100%;
}
.card .card-body {
  flex: 1 1 0;
  background-color: #264da3;
  color: #fff;
  padding: 8px;
}
.card .card-body1 {
  flex: 1 1 0;
  background-color: #5ca82a;
  color: #fff;
  padding: 8px;
}
.card .card-body p {
  font-size: large;
  /* margin: 0px; */
}
.card .card-body1 p {
  font-size: large;
  /* margin: 0px; */
}
.menu-item {
  font-size: 13px;
  opacity: 0;
  color: #f6f1ed;
  padding: 16px;
  font-weight: bold;
  transition: color 500ms ease-in-out;
}
.menu-item:hover,
.menu-item:active,
.menu-item:focus {
  cursor: pointer !important;
  color: #FBC02D !important;
}
.section {
  padding: 64px;
  margin: 16px;
  width: 80vw;
  box-shadow: #f6f1ed 0px 0px 4px 2px;
  border-radius: 4px;
}

.sectionsponsor {
  background-color: ;
  padding-top: 10px;
  padding-bottom: 250px;
  margin: 16px;
  width: 80vw;
  box-shadow: #f6f1ed 0px 0px 4px 2px;
  border-radius: 4px;
}


@keyframes scaleCardsUp {
  from {
    -webkit-transform: scale(1);
  }
  to {
    -webkit-transform: scale(1.1);
  }
}
@keyframes scaleCardsDown {
  from {
    -webkit-transform: scale(1.1);
  }
  to {
    -webkit-transform: scale(1);
  }
}


@media screen and (max-width: 320px) {
  #logoContainer {
    height: 270px !important;
    width: 210px !important;
  }
  #logoContainer div {
    height: 270px !important;
    width: 210px !important;
  }
}
@media screen and (max-width: 600px) {
  .menu-item {
    padding: 6px !important;
  }
  .searchbar {
    margin: 0px !important;
  }
}

.searchbar {
  background: transparent;
  color: whitesmoke;
  margin: 10px
}

.whiteborder {
  border-color: whitesmoke ;
  color: whitesmoke;

}

.padded {
  padding: 6px;
  padding-left: 12px;
  padding-right: 12px;
  
  margin: 10px
}

